# dagent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: agent.example.yaml
src/personal_agent/apps/: ask_flow.py  backup_cli.py  cli.py  confirmation_handlers.py  debug_cli.py  runtime_factory.py  schedule_cli.py  web_gui.py
src/personal_agent/core/backup/: git_backup.py
src/personal_agent/core/config/: __init__.py  loader.py
src/personal_agent/core/llm/: __init__.py  client.py
src/personal_agent/core/notify/: __init__.py  windows.py
src/personal_agent/core/runtime/: __init__.py  executor.py  plan.py  planner.py  rule_planner.py  runtime.py  state.py
src/personal_agent/core/tools/: __init__.py  base.py  registry.py
src/personal_agent/plugins/schedule/: adopt_inbox_service.py  adopt_overdue_service.py  mark_done_service.py  models.py  obsidian.py  organize_service.py  organized_migration_service.py  organizer.py  thino_parser.py  tools.py
src/personal_agent/plugins/schedule/obsidian/: __init__.py  capture_marker.py  matcher.py  reader.py  writer.py
src/personal_agent/plugins/schedule/parsing/: __init__.py  (+3 more)
src/personal_agent/plugins/system/: tools.py
tests/core/: test_rule_planner.py
tests/plugins/schedule/: test_add_item_service.py  test_adopt_inbox_service.py  test_adopt_overdue_service.py  test_cancel_service.py  test_date_resolver.py  test_obsidian_reader.py  test_organizer.py  test_recurring_service.py  test_reminder_service.py  test_reminder_state.py  test_reschedule_service.py  test_thino_parser.py
(+14 files in other folders)
